chore(Andie): Updated deprecated locale method