@@ -11,18 +11,18 @@ import javax.imageio.ImageIO;
  * <p>
  * Main class for A Non-Destructive Image Editor (ANDIE).
  * </p>
- * 
+ *
  * <p>
  * This class is the entry point for the program.
  * It creates a Graphical User Interface (GUI) that provides access to various
  * image editing and processing operations.
  * </p>
- * 
+ *
  * <p>
  * <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA
  * 4.0</a>
  * </p>
- * 
+ *
  * @author Steven Mills
  * @version 1.0
  */
@@ -45,7 +45,7 @@ public class Andie {
      * <p>
      * Launches the main GUI for the ANDIE program.
      * </p>
-     * 
+     *
      * <p>
      * This method sets up an interface consisting of an active image (an
      * {@code ImagePanel})
@@ -54,7 +54,7 @@ public class Andie {
      * These operations are implemented {@link ImageOperation}s and triggered via
      * {@code ImageAction}s grouped by their general purpose into menus.
      * </p>
-     * 
+     *
      * @see ImagePanel
      * @see ImageAction
      * @see ImageOperation
@@ -64,7 +64,7 @@ public class Andie {
      * @see FilterActions
      * @see ColourActions
      * @see MacroActions
-     * 
+     *
      * @throws Exception if something goes wrong.
      */
     private static void createAndShowGUI() throws Exception {
@@ -163,7 +163,7 @@ public class Andie {
         newMenuBar.add(macroActions.createMenu());
 
         frame.setJMenuBar(newMenuBar);
-        
+
         CreateHotKey.createHotkey(fileMenu, KeyEvent.VK_F,0,"filemenu");
         CreateHotKey.createHotkey(editMenu, KeyEvent.VK_E, 0, "editmenu");
         CreateHotKey.createHotkey(viewMenu, KeyEvent.VK_V, 0, "viewmenu");
@@ -177,13 +177,13 @@ public class Andie {
         frame.setVisible(true);
     }
 
-    
+
 
     /**
      * <p>
      * Gets the frame.
      * </p>
-     * 
+     *
      * @return The frame.
      */
     public static JFrame getFrame() {
@@ -205,12 +205,12 @@ public class Andie {
      * <p>
      * Main entry point to the ANDIE program.
      * </p>
-     * 
+     *
      * <p>
      * Creates and launches the main GUI in a separate thread.
      * As a result, this is essentially a wrapper around {@code createAndShowGUI()}.
      * </p>
-     * 
+     *
      * @param args Command line arguments, not currently used
      * @throws Exception If something goes awry
      * @see #createAndShowGUI()
@@ -219,7 +219,8 @@ public class Andie {
         javax.swing.SwingUtilities.invokeLater(new Runnable() {
 
             public void run() {
-                Locale.setDefault(new Locale("en", "NZ"));
+
+                Locale.setDefault(Locale.of("en", "NZ"));
 
                 // Now making the ResourceBundle
                 bundle = ResourceBundle.getBundle("cosc202/andie/MessageBundle");
